--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>رزومه نازنین امینی عشق آبادی  </title>
-    <meta name="description" content="نازنین امینی عشق آبادی دانشجوی مهندسی کامپیوتر، nazanin amini eshgh abadi" />
+    <title>رزومه المیرا حبیب پور  </title>
+    <meta name="description" content="المیرا حبیب پور دانشجوی مهندسی کامپیوتر، elmira habibpour" />
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -56,7 +56,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">نازنین امینی عشق ابادی </a>
+                    <a class="navbar-brand" href="#">المیرا حبیب پور </a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -113,11 +113,11 @@
                     </div>
                     <div class="col-md-8">
                         <div class=" person_details ">
-                            <h3 class="personname">نازنین امینی عشق آبادی </h3>
+                            <h3 class="personname">المیرا حبیب پور </h3>
                             <h4>
                             </h4>
                             <p>
-                                نازنین امینی عشق آبادی ، متولد 79، تهران ، مجرد ، دانشجوی مهندسی کامپیوتر، علاقه مند به امنیت و شبکه   
+                                المیرا حبیب پور ، متولد 75، تهران ، متاهل ، دانشجوی مهندسی کامپیوتر، علاقه مندبه شبکه   
                             </p>
                             <div class="person_information">
                                 <ul>
@@ -142,10 +142,10 @@
                                 </ul>
                                 <ul>
                                     <li>
-                                        <a>khatoon1978.so@gmail.com</a>
+                                        <a>elmirahabibpour1375@gmail.com</a>
                                     </li>
                                     <li>
-                                        <a>09026052830</a>
+                                        <a>09195797884</a>
                                     </li>
                                     <li>
                                         <a>تهران</a>
@@ -153,8 +153,8 @@
                                 </ul>
 
                                 <li>
-                                    <a href="https://https://quera.ir/profile/khatoon1978.so" target="_blank">صفحه من در وب
-                                        سایت كوئرا</a>
+                                    <a href="" target="_blank">صفحه من در وب
+                                        </a>
                                 </li>
                                 <li>
                                     <a href="" target="_blank">دانلـــود فــرم ارزیابی (چک لیست)</a>
@@ -446,10 +446,10 @@
                             <div class="portfolio_item">
                                 <div class="portfolio_title hvr-underline-from-center">
                                     <a>
-                                        <h4 class=""> دوره C++ ,C</h4>
+                                        <h4 class=""> </h4>
                                     </a>
-                                    <h5>خانه فرهنگی حر </h5>
-                                    <label class="date">پاییز 1397</label>
+                                    <h5> </h5>
+                                    <label class="date"></label>
                                 </div>
                             </div>
                         </div>
@@ -459,10 +459,10 @@
                             <div class="portfolio_item">
                                 <div class="portfolio_title hvr-underline-from-center">
                                     <a>
-                                        <h4 class=""> دوره Netwotk +</h4>
+                                        <h4 class=""> </h4>
                                     </a>
-                                    <h5>مجتمع فنی تهران شعبه انقلاب </h5>
-                                    <label class="date">تابستان 1398</label> 
+                                    <h5> </h5>
+                                    <label class="date"></label> 
                                 </div>
                             </div>
                         </div>
