--- a/en.html
+++ b/en.html
@@ -2,8 +2,8 @@
 <html lang="en" style="min-height:100%">
 <head>
     <meta charset="UTF-8">
-<title>Rezome Nazanin Amini Eshgh Abadi </title>
-<meta name="description" content="Nazanin Amini Eshgh Abadi" />
+<title>Rezome elmira habibpour </title>
+<meta name="description" content="elmira habibpour" />
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -51,7 +51,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Nazanin Amini Eshgh Abadi</a>
+                    <a class="navbar-brand" href="#">elmira habibpour</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -99,7 +99,7 @@
                     </div>
                     <div class="col-md-8">
                         <div class=" person_details ">
-                            <h3 class="personname">Nazanin Amini Eshgh Abadi</h3>
+                            <h3 class="personname">elmira habibpour</h3>
                             <h4>
                             </h4>
                             <p>
@@ -128,10 +128,10 @@
                                 </ul>
                                 <ul>
                                         <li>
-                                            <a href="khatoon1978.so@gmail.com">khatoon198.so@gmail.com</a>
+                                            <a href="elmirahabibpoure1375@gmail.com">khatoon198.so@gmail.com</a>
                                         </li>
                                                                             <li>
-                                            <a>09026052830</a>
+                                            <a>09195797884</a>
                                         </li>
                                                                                                                                                     <li>
                                             <a>Tehran</a>
@@ -139,7 +139,7 @@
                                 </ul>
 
                                                                                                                                                    <li>
-                                         <a href="https://https://quera.ir/profile/khatoon1978.so">https://https://quera.ir/profile/khatoon1978.so</a>
+                                         <a href=""></a>
                                         </li>
 
                                                                                                                                                     <li>
