--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="col-md-3">
                         <div class="person_img">
                             <div class="user-image"
-                                style="background-image:url('amin.jpg');">
+                                style="background-image:url('amin.j20190810_110842.jpg');">
                             </div>
                         </div>
                         <div class="social">
