--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="col-md-3">
                         <div class="person_img">
                             <div class="user-image"
-                                style="background-image:url('eli.jpg');">
+                                style="background-image:url("https://avatars1.githubusercontent.com/u/72578558?s=400&u=8fce5baa00cc413792ecd571bc2b9c583d2c67cd&v=4");">
                             </div>
                         </div>
                         <div class="social">
