--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                 </ul>
 
                                 <li>
-                                    <a href="https://https://quera.ir/profile/khatoon1978.so" target="_blank">صفحه من در وب
+                                    <a href="https://quera.ir/profile/khatoon1978.so" target="_blank">صفحه من در وب
                                         سایت كوئرا</a>
                                 </li>
                                 <li>
